--- a/boatpainting.html
+++ b/boatpainting.html
@@ -315,10 +315,10 @@
                 </section>
 
                 <section class="imgbox">
-                  <h4>Boat Brands Repaired</h4>
+                  <h4>Recommended Topside Paints</h4>
                   <figure>
                     <div class="container logobox">
-                        <div class="container imgblock"><a href="https://www.aviaraboats.com/#av28" target="_blank"><img src="resources/images/boatbrands/Aviara Repair shop.svg" alt="Aviara Repair shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.aviaraboats.com/#av28" target="_blank"><img src="resources/images/boatpainting/topsidepaints/Boat Shop with Awlgrip Paint Repair Service.jpg" alt="Awlgrip boat painter"></a></div>
                         <div class="container imgblock"><a href="https://azimutyachts.com/en/" target="_blank"><img src="resources/images/boatbrands/Azimut Yacht Repairs.png" alt="Azimut Yacht Repairs"></a></div>
                         <div class="container imgblock"><a href="https://www.barlettapontoonboats.com/" target="_blank"><img src="resources/images/boatbrands/Barletta Boat Repair.jpg" alt="Barletta Boat Repair"></a></div>
                         <div class="container imgblock"><a href="https://bertram.com/" target="_blank"><img src="resources/images/boatbrands/Bertram Repair Shop.jpg" alt="Bertram Repair Shop"></a></div>
