--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </button>
                 </article>
                 <figure class="figureright">
-                    <img src="resources/images/front/Maryland Boat Painting.png" alt="Boat Painting in Maryland" class="pic">
+                    <img src="resources/images/front/Maryland Boat Painting.jpg" alt="Boat Painting in Maryland" class="pic">
                 </figure>
             </section>
             
@@ -130,7 +130,7 @@
 
             <section class="container section">
                 <figure class="figureright">
-                        <img src="resources/images/front/Brightwork in Maryland.png" alt="Boat Repair in Maryland" class="pictall shadow">
+                        <img src="resources/images/front/Brightwork in Maryland.jpg" alt="Boat Repair in Maryland" class="pictall shadow">
                 </figure>
                 <article class="articleright">
                     <h5>About</h5>
@@ -159,7 +159,7 @@
                     </button>
                 </article>
                 <figure class="figureright">
-                        <img src="resources/images/front/Boat Consultant in Maryland.png" alt="Boat Repair in Maryland" class="pictall">
+                        <img src="resources/images/front/Marine Consultant in Maryland.png" alt="Boat Repair in Maryland" class="pictall">
                 </figure>
             </section>
         
