--- a/fiberglassrepair.html
+++ b/fiberglassrepair.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"content="Maryland's Premiere Boat Repair Shop">
-  <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, yacht repair, boat service, yacht service, boat yard, fiberlgass repair, gelcoat repair, fiberglass, gelcoat, marine, boat, yacht, repair, service, shop, boat dealership, boat dealer, paint repair">
+  <meta name="description"content="Maryland Fiberglass Repair">
+  <meta name="keywords" content="fiberglass, repair, construction, fiberglass repair, fiberglass construction, fiberglass boat repair, fiberglass repair shop, boat repair, pool, pool repair, boat, boat shop, marina, boat yard, boat building, yacht, service, services">
   <meta name="author" content="Maryland">
   <meta name="robots" content="index,follow">
   <meta name="googlebot" content="index,follow">
   <meta name="geo.position" content="38.9756; -76.3055">
   <meta name="geo.placename" content="Stevensville">
   <meta name="geo.region" content="US-MD">
-  <meta property="og:title" content="Maryland Boat Repair Shop">
-  <meta property="og:description" content="Marylands premiere boat repair shop">
+  <meta property="og:title" content="Maryland Fiberglass Repair">
+  <meta property="og:description" content="Maryland Fiberglass Repair">
   <meta property="og:image" content="">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
@@ -58,7 +58,7 @@
   <header class="pagehead">
     <div class="container toppage">
       <div class="bannerpage">
-        <h1>Maryland Boat Repair Shop</h1>
+        <h1>Maryland Fiberglass Repair</h1>
         <h2>What repair?</h2>
         <div>
           <br>
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="topimg">
-        <img src="resources/images/boatrepair/gunwhale/Fiberglass Boat Repair in Maryland 4.jpg" alt="Maryland boat repair shop" class="pic shadow">
+        <img src="resources/images/boatrepair/gunwhale/Fiberglass Boat Repair in Maryland 4.jpg" alt="Maryland fiberglass repair" class="pic shadow">
       </div>
     </div>
     <button type="button" id="call">
@@ -147,14 +147,15 @@
     </section>
 
     <article>
-      <h4>How to perform a perfect repair:</h4>
+      <h4>How to perform a fiberglass repair:</h4>
       <div class="ol">
         <ol>
           <li>Acquire necessary equipment and supplies.</li>
-          <li>Remove damaged, flaking, or deteriorated parts of the vessel.</li>
-          <li>Remove protective coating around the repair area.</li>
-          <li>Rebuild damaged area with appropriate fiberglass, resin, and compounds.</li>
-          <li>Recreate the original shape of the vessel with fairing.</li>
+          <li>Remove damaged, flaking, or deteriorated fiberglass material.</li>
+          <li>Grind repair area smooth</li>
+          <li>Fill holes, gaps, and crevces before laying down fiberglass cloth</li> 
+          <li>Rebuild damaged area with appropriate fiberglass and resin</li>
+          <li>Recreate the original shape of the vessel with fairing compouds.</li>
           <li>Apply new protective coating over the repair area.</li>
         </ol>
       </div>
@@ -275,26 +276,46 @@
     </section>
 
     <article>
-      <h4>About Boat Repairs</h4>
+      <h4>About Fiberglass Repair</h4>
       <div class="paragraph">
-        <p>While there are some general steps that are part of every repair processes, the execution of those steps vary for every repair. The repair process must be adapted for variences in:
+        <p>
         <ul>
-          <li><b>Core material:</b> Some boat parts are made of solid fiberglass; others have lightweight composite cores. There are different types of resins used in boat construction includin: polyester resins, vinylester resins, and epoxy resins
-                  Many different types of fiberglass cloths are used in boat construction including: mat, roving, stichmats, and tapes. In addition to cloths,  additives and fillers mixed with resins are used in boa construciton. Common additives and fillers
-                  include: thixotrophic powder, glass bubbles, milled fiberglass fiber, chopped strand fiberglass, wood flour, pigments, polyester surfacing agent, and mold release wax. Carbon fiber cloth is becoming increasingly common in the boat construction industry
-                  adding a new high-strength, high-price, category of core material.</li>
-          <li><b>Protective Coating:</b> Marine core material isn't waterproof, it's water resistant. Uncoated core materials will absorb moisture and deteriorate over time if not properly protected. 
-                  The amount of protective marine coatings on the market constantly increase as manufacturers develop new paints and coatings for specialty purposes. There are 2 types of protective marine coatings: paint and gelcoat. Popular marine paint brands include:
-                  Interlux, Petite, Bluewater, Totalboat, Rust-Oleum, Imron, Kirbypaint, and Alexseal. Popular gelcoat manufacturers include: Totalboat, Evercoat, HKResearch, Minicraft, and Riteks. See my gelcoat and boat painting pages for more information about these protective coatings.</li>
-          <li><b>Weather:</b> Most boat building and repair products cure well in a dry environment with the temperatures between 60 - 80 degrees Farenheight. Contact with moisture or extreme temperature will reduce product curing, strength, and visual appeal.
-                  Maryland has a temperate decidious forest climate. It can be difficult to schedule and perform boat repairs in Maryland due to low temperatures in the winter, hot temperatures in the summer, substantial amount of rainfall, and humidity from the ocean, Chesapeake Bay, rivers, and vegetation.
-                  It can be difficult to perform a high quality repair in Maryland due to the tendancy of humidity to reach 100% at night, creating dew that coats everything with water. Most boat building materials recommend no contact with water during the curing process.
-          <li><b>Part of vessel:</b> The topsides of boats are built differently than the hulls. Boat bottoms are usually built out of solid fiberglass and resin while topsides often use lightweight porous core material. Topside core material can absorb moisture that leaks in through damaged areas or uncaulked screw holes.
-                  Moisture must be completely removed from the core material before the water deteriorates the structure from the inside. Hulls must have proper drainage and ventilation to prevent moisture buildup and deterioration. Different protecitve coatings are used below the waterline than above it.
-                  Topside protective coatings include gelcoat, urethane paints, and polyester paints. Bottom protective coatings inlude: Epoxy primers, epoxy paints, barrier coats, hard bottom paints, and ablative bottom paints.</li>
-          <li><b>Location of vessel:</b> It's important to consider the geographic location of a vessel in preparation for performing a repair. In Maryland, the chances of dew coating the boat in water at night increase closer to the water. Curing repair materials is more problematic for boats sitting in the water
-                  or in low-lying areas near the water such as Kent Island, St.Micheals, and Annapolis. I know from experience that boats located in low-lying areas near the bay are likely to get covered in moisture during warm summer months. Transporting a boat inland or placing the boat in an enclosed building
-                  will reduce the chances of moisture interfering with curing of repair products.</li>
+            <li><b>What is Fiberglass?  </b>Fiberglass is a type of reinforced plastic material composed of fine glass fibers embedded in a polymer matrix. The glass fibers are typically made of silica or other glass materials and are woven into a fabric or mat. The polymer matrix, often made of 
+                    epoxy, polyester, or vinyl ester, binds the fibers together and gives the material its strength and rigidity. Fiberglass is known for its lightweight yet strong properties, corrosion resistance, and versatility. It is commonly used in various industries for applications such 
+                    as boat construction, automotive components, aircraft parts, piping, and insulation. The material is also used in the production of fiberglass-reinforced plastics (FRP) for a wide range of structural and decorative purposes.</li>
+            <li><b>Fiberglass is used for:</b> 
+                <ul>
+                    <li class="sublist"><b>Construction and Building Materials:  </b> Fiberglass is used in the construction industry for making doors, windows, roofing materials, and panels. It's also employed in the production of pipes, tanks, and other structural components.</li>
+                    <li class="sublist"><b>Automotive Industry:  </b>Fiberglass is utilized in the manufacturing of automotive components such as body panels, fenders, hoods, and interior parts. Its lightweight and durable nature make it a popular choice in the automotive sector.</li>
+                    <li class="sublist"><b>Aerospace:  </b>In the aerospace industry, fiberglass is employed in the construction of aircraft components due to its strength-to-weight ratio. It helps reduce the overall weight of the aircraft while maintaining structural integrity.</li>
+                    <li class="sublist"><b>Boat and Marine Industry:  </b>Fiberglass is extensively used in boat and shipbuilding for making hulls, decks, and other structural components. Its resistance to water and corrosion makes it an ideal material for marine applications.</li>
+                    <li class="sublist"><b>Sports and Recreation:  </b>Fiberglass is used in the production of sporting goods such as fishing rods, kayaks, canoes, and various types of protective gear. Its strength and flexibility are advantageous in these applications.</li>
+                    <li class="sublist"><b>Wind Energy:  </b>Fiberglass composites are employed in the manufacturing of wind turbine blades due to their lightweight and durable characteristics.</li>
+                    <li class="sublist"><b>Electronics and Electrical Components:  </b>Fiberglass is used in the production of electrical insulation materials, circuit boards, and other electronic components.</li>
+                    <li class="sublist"><b>Insulation:  </b>Fiberglass is a common material for thermal and acoustic insulation in buildings. It is used in the form of batts, rolls, or loose-fill insulation.</li>
+                    <li class="sublist"><b>Art and Design:  </b>Fiberglass is often used in art and design projects for creating sculptures, installations, and decorative elements due to its moldability and strength.</li>
+                    <li class="sublist"><b>Medical Applications:  </b>Fiberglass composites are sometimes used in medical applications, such as prosthetics and orthopedic devices, due to their lightweight and customizable properties.</li>
+                <ul>
+            </li>
+            <li><b>Fiberglass is difficult to work with because:</b>
+                <ul>
+                    <li class="sublist"><b>Irritating to Skin and Eyes:  </b>Fiberglass materials can cause irritation to the skin and eyes. The fine glass fibers can be abrasive, leading to itching and discomfort. It is essential to take proper safety precautions, such as wearing protective clothing and eyewear, to avoid direct contact.</li>
+                    <li class="sublist"><b>Respiratory Hazards:  </b>When fiberglass is cut or sanded, it releases fine airborne particles that can be inhaled. Inhaling these particles may cause respiratory irritation and pose health risks. Using proper respiratory protection, such as masks or respirators, is crucial when working with fiberglass.</li>
+                    <li class="sublist"><b>Safety Concerns with Resins: </b>The resins used in fiberglass applications, such as epoxy or polyester resins, may contain hazardous chemicals. Proper ventilation and protective measures are necessary to prevent exposure and ensure safety.</li>
+                    <li class="sublist"><b>Messy and Sticky:  </b>Working with fiberglass often involves handling sticky resins and materials. This can be messy, and it may require careful application to achieve the desired results. Additionally, the materials can be challenging to clean up.</li>
+                    <li class="sublist"><b>Precision and Skill Required:  </b>Achieving the desired strength and appearance in fiberglass products requires precision and skill. Working with molds, ensuring proper resin-to-fiber ratios, and avoiding air bubbles are crucial for producing high-quality fiberglass components.</li>
+                    <li class="sublist"><b>Curing Time:  </b> Fiberglass components typically require sufficient time to cure and harden. This curing time can vary depending on factors such as temperature and humidity. Patience is required to allow the material to fully set before further handling or finishing.</li>
+                    <li class="sublist"><b>Mold Preparation: </b>Creating and preparing molds for fiberglass fabrication can be a complex process. Ensuring the molds are well-designed, properly sealed, and free from defects is essential for producing accurate and high-quality fiberglass products.</li>
+                    <li class="sublist"><b>Limited Structural Repair Options: </b>Once fiberglass is damaged, repairing it can be challenging, especially if the damage is extensive. Unlike some other materials, fiberglass may require specialized skills and materials for effective repairs.</li>
+                <ul>
+            </li>
+            <li><b>The bottom line: </b>Fiberglass repair is one task that is worth hiring a professional to perform. Fiberglass is a difficult and dangerous product to work with. Unsing inadequate protection can lead to chemical injuries, hospitalization, and even death. In addition, 
+                    it takes years of practice to develop the skills necessary to perform a high quality repair. Fiberglass construction is a science and an art. It takes a fundamental understanding of chemistry, the ability perform calculations quckley in stressful situations, and the 
+                    artistic akills of a sculptor to perform high quality fiberglass repairs. Furthermore, there are too many types and brands of resins, fiberglass, additives, protective equipment, tools, and other supplies to discuss on one page.</li>
+
+            <li><b>My Services: </b>I began building with fiberglass while working for boat builders in the early 2000's. Over thepast 20 years, I've built 30 - 50 ft custom yachts from the ground up for boat builders and completed a variety of fiberglass repair projects on my own. I only have pictures of a small fraction 
+                of the fiberglass work I've accomplished. I'm finished working on large fiberglass project due to chemical lung injuries I sustained while doing large fiberglass jobs. I still find time to perform small high quality fiberglass repair services from time to time. I'm capable of providing fiberglass consulting services, 
+                but there's so much to learn even to perform a small repair, that it would take weeks just to teach an inexperienced person the basics.
         </ul>
       </div>
     </article>
