--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"content="Maryland's Premiere Boat Repair Shop">
+    <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, yacht repair, boat service, yacht service, boat yard, marina, service, shop, yard, boat, marine, yacht, baot builder, builder">
+    <meta name="author" content="Maryland">
+    <meta name="robots" content="index,follow">
+    <meta name="googlebot" content="index,follow">
+    <meta name="geo.position" content="38.9756; -76.3055">
+    <meta name="geo.placename" content="Stevensville">
+    <meta name="geo.region" content="US-MD">
+    <meta property="og:title" content="Maryland Boat Repair Shop">
+    <meta property="og:description" content="Marylands premiere boat repair shop">
+    <meta property="og:image" content="">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="resources/linked/style.css" rel="stylesheet">
-    <title>Nicks Boat Work</title>
+    <title>Maryland Boat Shop</title>
 </head>
     <body>
 
@@ -41,6 +53,7 @@
         <header>
             <div class="container bannerimg">
                 <div class="bannertext">
+                    <h1>Maryland Boat Shop</h1>
                     <h2>No Fees</h2>
                     <h2>Just Service</h2>
                     <br>
@@ -184,8 +197,8 @@
 
     <script>
         function toggleDropdown() {
-          var dropdown = document.querySelector('.dropdown');
-          dropdown.classList.toggle('show');
+            var dropdown = document.querySelector('.dropdown');
+            dropdown.classList.toggle('show');
         }
-      </script>
+    </script>
 </html>
