--- a/fiberglassrepair.html
+++ b/fiberglassrepair.html
@@ -297,6 +297,16 @@
                     <li class="sublist"><b>Medical Applications:  </b>Fiberglass composites are sometimes used in medical applications, such as prosthetics and orthopedic devices, due to their lightweight and customizable properties.</li>
                 <ul>
             </li>
+            
+            
+            <li><b>Supplies: </b>The amount of supplies that can be used in fiberglass construction is virutally endless. The increasing popularity of carbon fiber is gradually rendering the term "fiberglass repair" irrelevant as "composite repair" becomes more apprpriate terminology. The popularity of 3D printing has 
+                led to the development of composites that contain no fibrous material. For introductory purposes, I'll briefly list some of the most common materials used in fiberglass boat construction in the past. Resins: Polyester, Vinyl ester, Epoxy. Fiberglass cloth: woven, plain weave, twill weave, satin weave, chopped strand mat, 
+                woven roving, stitchmat, double bias stitchmat, double bias cloth. Additives: chopped strand, milled fiber, glass bubbles, thixotrophic powder, microfibers, pigments, and surfacing agent.</li>
+
+            <li><b>My Services: </b>I began building with fiberglass while working for boat builders in the early 2000's. Over the past 20 years, I've built 30 - 50 ft custom yachts from the ground up for boat builders and completed a variety of fiberglass repair projects on my own. I only have pictures of a small fraction 
+                of the fiberglass work I've accomplished. I'm finished working on large fiberglass projects due to chemical lung injuries I sustained while doing a large fiberglass job. I still find time to perform small high quality fiberglass repair services from time to time. I'm capable of providing fiberglass consulting services, 
+                but there's so much to learn even to perform a small repair, that it would take days just to teach an inexperienced person the basics.</li>
+
             <li><b>Fiberglass is difficult to work with because:</b>
                 <ul>
                     <li class="sublist"><b>Irritating to Skin and Eyes:  </b>Fiberglass materials can cause irritation to the skin and eyes. The fine glass fibers can be abrasive, leading to itching and discomfort. It is essential to take proper safety precautions, such as wearing protective clothing and eyewear, to avoid direct contact.</li>
@@ -309,13 +319,11 @@
                     <li class="sublist"><b>Limited Structural Repair Options: </b>Once fiberglass is damaged, repairing it can be challenging, especially if the damage is extensive. Unlike some other materials, fiberglass may require specialized skills and materials for effective repairs.</li>
                 <ul>
             </li>
-            <li><b>The bottom line: </b>Fiberglass repair is one task that is worth hiring a professional to perform. Fiberglass is a difficult and dangerous product to work with. Unsing inadequate protection can lead to chemical injuries, hospitalization, and even death. In addition, 
-                    it takes years of practice to develop the skills necessary to perform a high quality repair. Fiberglass construction is a science and an art. It takes a fundamental understanding of chemistry, the ability perform calculations quckley in stressful situations, and the 
-                    artistic akills of a sculptor to perform high quality fiberglass repairs. Furthermore, there are too many types and brands of resins, fiberglass, additives, protective equipment, tools, and other supplies to discuss on one page.</li>
 
-            <li><b>My Services: </b>I began building with fiberglass while working for boat builders in the early 2000's. Over thepast 20 years, I've built 30 - 50 ft custom yachts from the ground up for boat builders and completed a variety of fiberglass repair projects on my own. I only have pictures of a small fraction 
-                of the fiberglass work I've accomplished. I'm finished working on large fiberglass project due to chemical lung injuries I sustained while doing large fiberglass jobs. I still find time to perform small high quality fiberglass repair services from time to time. I'm capable of providing fiberglass consulting services, 
-                but there's so much to learn even to perform a small repair, that it would take weeks just to teach an inexperienced person the basics.
+            <li><b>The bottom line: </b>Fiberglass repair is a task that is worth hiring a professional to perform. Fiberglass is a difficult and dangerous product to work with. Unsing inadequate protection can lead to chemical injuries, hospitalization, and even death. In addition, 
+                it takes years of practice to develop the skills necessary to perform a high quality repair. Fiberglass construction is a science and an art. It takes a fundamental understanding of chemistry, the ability perform calculations quckley in stressful situations, and the 
+                artistic akills of a sculptor to perform high quality fiberglass repairs.</li>
+
         </ul>
       </div>
     </article>
