--- a/boatpainting.html
+++ b/boatpainting.html
@@ -59,7 +59,7 @@
     <div class="container toppage">
       <div class="bannerpage">
         <h1>Maryland Boat Painter</h1>
-        <h2>Maryland's Premeire</h2>
+        <h2>Maryland's</h2>
         <h2>Boat Painter</h2>
         <div>
           <br>
