--- a/boatrepair.html
+++ b/boatrepair.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="topimg">
-        <img src="resources/images/boatrepair/gunwhale/Fiberglass Boat Repair in Maryland 4.jpg" alt="Maryland boat repair shop" class="pic shadow">
+        <img src="resources\images\boatrepair\gunwhale\Fiberglass Repair at Boat Repair Shop.jpg" alt="Maryland boat repair shop" class="pic shadow">
       </div>
     </div>
     <button type="button" id="call">
