--- a/boatpainting.html
+++ b/boatpainting.html
@@ -54,7 +54,7 @@
     </div>
   </nav>
   
-  <div class="bannerimg "></div>
+  <div class="bannerimgpainting"></div>
   <header class="pagehead">
     <div class="container toppage">
       <div class="bannerpage">
