--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="video-container">
                 <video autoplay loop muted id="video-bg">
-                  <source src="resources/videos/tubing.mp4" type="video/mp4">
+                  <source src="resources/videos/Maryland Boat Repair.mp4" type="video/mp4">
                 </video>
             </div>
             <button type="button" id="call">
