--- a/boatrepair.html
+++ b/boatrepair.html
@@ -54,7 +54,7 @@
     </div>
   </nav>
     
-  <div class="bannerimg "></div>
+  <div class="bannerimgrepair"></div>
   <header class="pagehead">
     <div class="container toppage">
       <div class="bannerpage">
