--- a/boatrepair.html
+++ b/boatrepair.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"content="Maryland's Premiere Boat Repair Shop">
-  <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, yacht repair, boat service, yacht service, boat yard, fiberlgass repair, gelcoat repair, fiberglass, gelcoat, marine, boat, yacht, repair, service, shop, boat dealership, boat dealer, paint repair">
+  <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, st micheals, denton, yacht repair, boat service, yacht service, boat yard, fiberlgass repair, gelcoat repair, fiberglass, gelcoat, marine, boat, yacht, repair, service, shop, boat dealership, boat dealer, paint repair">
   <meta name="author" content="Maryland">
   <meta name="robots" content="index,follow">
   <meta name="googlebot" content="index,follow">
@@ -20,7 +20,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="resources/linked/style.css" rel="stylesheet">
-  <title>Maryland Boat Repair</title>
+  <title>Nicks Boat Repair</title>
 </head>
 
 <body>
@@ -58,7 +58,7 @@
   <header class="pagehead">
     <div class="container toppage">
       <div class="bannerpage">
-        <h1>Maryland Boat Repair Shop</h1>
+        <h1>Maryland Boat Repair Shop In Annapolis and Kent Island</h1>
         <h2>What repair?</h2>
         <div>
           <br>
