--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"content="Maryland's Premiere Boat Repair Shop">
-    <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, yacht repair, boat service, yacht service, boat yard, marina, service, shop, yard, boat, marine, yacht, baot builder, builder">
+    <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, denton, yacht repair, boat service, yacht service, boat yard, marina, service, shop, yard, boat, marine, yacht, baot builder, builder">
     <meta name="author" content="Maryland">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
@@ -17,7 +17,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="resources/linked/style.css" rel="stylesheet">
-    <title>Maryland Boat Shop</title>
+    <title>Nicks Boat Work</title>
 </head>
     <body>
 
