--- a/gelcoatrepair.html
+++ b/gelcoatrepair.html
@@ -34,7 +34,7 @@
           <li><a href="boatpainting.html" class="nav-link">Painting</a></li>
           <li><a href="fiberglassrepair.html" class="nav-link">Fiberglass</a></li>
           <li><a href="gelcoatrepair.html" class="nav-link">Gelcoat</a></li>
-          <li><a href="brightwork.html" class="nav-link">Brightwork</a></li>
+          <li><a href="varnishing.html" class="nav-link">Varnishing</a></li>
           <li><a href="marineconsultant.html" class="nav-link">Consulting</a></li>
         </ul>
       </div>
@@ -48,7 +48,7 @@
         <a href="boatpainting.html">Boat Painting</a>
         <a href="fiberglassrepair.html">Fiberglass</a>
         <a href="gelcoatrepair.html">Gelcoat</a>
-        <a href="brightwork.html">Brightwork</a>
+        <a href="varnishing.html">Varnishing</a>
         <a href="marineconsultant.html">Consulting</a>
       </div>
     </div>
