--- a/varnishing.html
+++ b/varnishing.html
@@ -54,7 +54,7 @@
     </div>
   </nav>
     
-  <div class="bannerimgfiberglass "></div>
+  <div class="bannerimgvarnishing"></div>
   <header class="pagehead">
     <div class="container toppage">
       <div class="bannerpage">
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="topimg">
-        <img src="resources\images\fiberglass\pineyrepair\Fiberglass Boat Repair Maryland.jpg" alt="Maryland fiberglass repair" class="pic shadow">
+        <img src="resources\images\brightwork\calbrightwork\Boat Varnishing in Maryland 5.jpg" alt="Maryland fiberglass repair" class="pic shadow">
       </div>
     </div>
     <button type="button" id="call">
