--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"content="Maryland's Premiere Boat Repair Shop">
-    <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, denton, yacht repair, boat service, yacht service, boat yard, marina, service, shop, yard, boat, marine, yacht, baot builder, builder">
+    <meta name="description"content="Maryland Boat Inspection">
+    <meta name="keywords" content="boat, yacht, sailboat, inspection, service, consultant, prepurchase, presale, pre-sale, pre-purchase, dealer, dealership, boat sales, boat inspections, marine, broker, yacht broker, boat broker, boat business, consulting">
     <meta name="author" content="Maryland">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta name="geo.position" content="38.9756; -76.3055">
     <meta name="geo.placename" content="Stevensville">
     <meta name="geo.region" content="US-MD">
-    <meta property="og:title" content="Maryland Boat Repair Shop">
-    <meta property="og:description" content="Marylands premiere boat repair shop">
+    <meta property="og:title" content="Maryland Boat Inspections">
+    <meta property="og:description" content="Maryland Boat Inspections">
     <meta property="og:image" content="">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="resources/linked/style.css" rel="stylesheet">
-    <title>Nicks Boat Work</title>
+    <title>Maryland Marine Consultant</title>
 </head>
     <body>
 
@@ -54,8 +54,8 @@
             <div class="container bannerimg">
                 <div class="bannertext">
                     <h1>Maryland Marine Consultant</h1>
-                    <h2>Expert</h2>
-                    <h2>Advice</h2>
+                    <h2>Insider Advice</h2>
+                    <h2></h2>
                     <br>
                     <div class="bannertext2">
                         <h4>How to sell your boat</h4>
@@ -79,14 +79,17 @@
         <main>
             <section class="container section">
                 <figure class="figureleft">
-                        <img src="resources\images\consulting\selling a boat.jpg" alt="Boat Repair in Maryland" class="pic shadow">
+                        <img src="resources\images\consulting\selling a boat.jpg" alt="Boat sale inspection" class="pic shadow">
                 </figure>
                 <article class="articleright">
                     <h5>About</h5>
                     <h3>Selling a Boat</h3>
-                    <p>Since 2001 Nicks Boat Work has provided boat repair services in Maryland around Annapolis, Easton, and Kent Island.
-                        Over the years, Nick has perfected the repair process to the point of performing a high quality fiberglass and gelocat repair, from start to finish, in just 1 day! 
-                        Check out my repair portfolio!</p>
+                    <p>Over the past 20 years I've provided service to loads of clients whom wanted to sell their boat. I produced desirable results for people whom had realistic expectations and were able to communicate their needs.
+                        I didn't produce desirable results for clients whom said they wanted things done right, but didn't want 
+                        to spend much money. If you have unrealistic expectations and can't communicate your service needs clearly, you're just going waste the service technicians time. Wasting the service technicians time by speaking in riddles 
+                        is a good way end up with an old dirty fiberglass money-pit in your backyard. Instead of pissing off all of the service techs in the area, callme, I'll tell you 
+                        what you can realistically expect to accomplish with your restoration budget and how to inquire about service.
+                    </p>
                     <button type="button" class="button2">
                         <a href="boatrepair.html">How to Repair a Boat</a>
                     </button>
@@ -97,28 +100,32 @@
                 <article class="articleleft">
                     <h5>About</h5>
                     <h3>Buying a Boat</h3>
-                    <p>Since 2001 Nicks Boat Work has provided boat painting services in Maryland near Annapolis, Easton, and Kent Island.
-                        The boat painting process is a science and an art. Consult Maryland's premeire boat painter for help with your boat painting project. 
-                        Check out my gallery of boat painting projects!</p>
+                    <p>I've had the pleasure of meeting loads of boat owners over the years whom instinctivally purchased a boat becasue it was too good of a deal to pass on! It needs some mechanical work and paint, but it was a good deal! 
+                        At this point they've paid 3 or 4 service techs to service the vessel, detial it, make some improvements, and it just needs a little more mechanical work and paint. If this sounds like you or someone you know, call me. 
+                        I'll let you know how much it's going to cost, how long it's going to take, and how many services you'll have to hire to restore the boat. Then, you can make a well-informed decision on whether to procceed investing in the vessel or not. 
+                        Better yet, call me before purchasing a boat for a quick, low-cost inspection.
+                    </p>
                     <button type="button" class="button2">
                         <a href="boatrepair.html">How to Paint a Boat</a>
                     </button>
                 </article>
                 <figure class="figurerightshadow">
-                    <img src="resources\images\consulting\buying a boat.jpg" alt="Boat Painting in Maryland" class="pic shadow">
+                    <img src="resources\images\consulting\buying a boat.jpg" alt="Boat inspection in Maryland" class="pic shadow">
                 </figure>
             </section>
             
             <section class="container section">
                 <figure class="figureleft">
-                        <img src="resources\images\consulting\restoration.jpg" alt="Boat Repair in Maryland" class="pic shadow">
+                        <img src="resources\images\consulting\restoration.jpg" alt="Boat restoration in Maryland" class="pic shadow">
                 </figure>
                 <article class="articleright">
                     <h5>About</h5>
                     <h3>Boat Restoration</h3>
-                    <p>Since 2001 Nicks Boat Work provides fiberglass repair services in Maryland around Annapolis, Easton, and Kent Island.
-                        Nicks Boat Work has performed fiberglass repairs on boats, pools, hottubs, trucks, statues, and even on military base infrastructure.
-                        Check out my fiberglass repair porfolio!</p>
+                    <p>We've all seen the success stories on Youtube. All you have to do is buy a boat, fix it up, grab a camera, and you're off to Youtube success traveling the 7 seas while your followers cheer you on! 
+                        You can do this if you purchase the right vessel and proceed with the restoration in the correct sequence. The first step is diagnosing all of the problems with the vessel. An ocean-worthy vessel must be in tip-top shape 
+                        because you can't make Youtube videos from Davy Jones's locker. Imagine discovering that the deck needs to be replaced after painting the boat. I've encountered boat owners in that situation many times over the years. 
+                        Call me before proceeding with your restoration project for a quick, low-cost deck and hull inspection.
+                    </p>
                     <button type="button" class="button2">
                         <a href="fiberglassrepair.html">How to Repair Fiberglass</a>
                     </button>
@@ -129,21 +136,23 @@
                 <article class="articleleft">
                     <h5>About</h5>
                     <h3>Repair Advice</h3>
-                    <p>Nicks Boat Work provides gelcoat repair services in Maryland around Annapolis, Easton, and Kent Island.
-                        Nicks Boat Work has performed gelcoat repairs on boats, pools, and hottubs. With over 20 years of experience dealing with the 
-                        top gelcoat maufacturers in the country, Nick can find or produce the custom gelcoat color for your repair need.</p>
+                    <p>In my experience, about half of fiberglass repair technicians do high quality work and the other half don't. There's always been much more 
+                        of a demand for fiberglass repair techs than there is supply. Fiberglass repair requires many skillsets, is manual labor, and involves using toxic substanes on a daily basis. Boat shops only pay fiberglass techs $15 - $25/h and 
+                        charge $100/h for their work, so any fiberglass tech capable of making a webpage can quadruple their income by quitting thier job. You'll find the highest quality fiberglass repair techs working out of their home shops with a self-made website. 
+                        Call me to analyze your repair and point you in the direction of competant repair technicians.
+                    </p>
                     <button type="button" class="button2">
                         <a href="gelcoatrepair.html">How to Repair Gelcoat</a>
                     </button>
                 </article>
                 <figure class="figurerightshadow">
-                        <img src="resources\images\consulting\Boat Repair.jpg" alt="Boat Repair in Maryland" class="pic shadow">
+                        <img src="resources\images\consulting\Boat Repair.jpg" alt="Fiberglass boat repair service in Maryland" class="pic shadow">
                 </figure>
             </section>
 
             <section class="container section">
                 <figure class="figureleft">
-                        <img src="resources\images\consulting\maintenance.jpg" alt="Boat Repair in Maryland" class="pic shadow">
+                        <img src="resources\images\consulting\maintenance.jpg" alt="Marine Maitenance Serice in Maryland" class="pic shadow">
                 </figure>
                 <article class="articleright">
                     <h5>About</h5>
